# maxdb-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: buffer_overflow.cpp  use_after_free.cpp
mdb/: __init__.py  __main__.py  cli.py  config.py  display.py  mcp_server.py  session.py
udb/: __init__.py  __main__.py  ai.py  cli.py  config.py  display.py
udb/backend/: __init__.py  base.py  gdb.py  rr.py
