[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "mdb"
version     = "1.1.0"
description = "MDB — MaxDebugger: Time-Travel Debugger for C++ with MCP server for VS Code Copilot"
readme      = "README.md"
requires-python = ">=3.11"

authors = [
  { name = "mdb contributors" },
]

keywords = [
  "debugger", "time-travel", "gdb", "rr", "c++",
  "reverse-debugging", "claude", "ai", "mcp", "copilot",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Debuggers",
]

dependencies = [
  "mcp>=1.0.0",
]

[project.optional-dependencies]
anthropic = [
  "anthropic>=0.25.0",
]
dev = [
  "pytest>=8.0",
  "pytest-cov",
  "mypy",
  "ruff",
]

[project.scripts]
mdb     = "mdb.__main__:main"
mdb-mcp = "mdb.mcp_server:main"

[project.urls]
Homepage   = "https://github.com/XudongSunSF/maxdb-cli"
Issues     = "https://github.com/XudongSunSF/maxdb-cli/issues"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict         = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
